# Cplusplus_Projects

./: .gitignore
Beginner/CGPA/: CGPA  CGPA.cpp
Beginner/Calculator/: CMakeLists.txt  Calculator.cpp  Calculator.h  main.cpp
Beginner/Casino_Game/: CG  CMakeLists.txt  Casino_Game.cpp  Casino_Game.h  main.cpp
Beginner/L_R_System/: Authenticator.cpp  Authenticator.h  CMakeLists.txt  main.cpp
Beginner/Rock_Paper_Scissors/: RPS  R_P_S.cpp  R_P_S.h
Medium/Snake/: CMakeLists.txt  block.cpp  block.h  coor.py  coordinates.txt  end_display.cpp  end_display.h  food.cpp  food.h  loader.cpp  loader.h  main.cpp  main_menu.cpp  main_menu.h  score.cpp  score.h  scores.txt  snake.cpp  snake.h  snake_game.cpp  snake_game.h
